--- a/evo.ui
+++ b/evo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>694</height>
+    <height>798</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="tipoCB">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -82,7 +82,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPlainTextEdit" name="plainTextEdit">
+          <widget class="QPlainTextEdit" name="descricaoTE">
            <property name="plainText">
             <string/>
            </property>
@@ -101,7 +101,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPlainTextEdit" name="plainTextEdit_2"/>
+            <widget class="QPlainTextEdit" name="procedimentosTE"/>
            </item>
           </layout>
          </item>
@@ -226,6 +226,19 @@
        </item>
        <item>
         <widget class="QPlainTextEdit" name="preencherInfraTE"/>
+       </item>
+       <item alignment="Qt::AlignHCenter">
+        <widget class="QPushButton" name="copiarRelatorio">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Copiar Relatório</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
