--- a/adicionarFerramenta.ui
+++ b/adicionarFerramenta.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>320</width>
-    <height>240</height>
+    <height>384</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,7 +29,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QPlainTextEdit" name="noFerramentaTE">
+    <widget class="QPlainTextEdit" name="nomeFerramentaTE">
      <property name="plainText">
       <string>
 </string>
