--- a/evo.ui
+++ b/evo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>625</width>
-    <height>1020</height>
+    <height>1160</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -221,11 +221,6 @@
        <property name="editable">
         <bool>false</bool>
        </property>
-       <item>
-        <property name="text">
-         <string>Multímetro Fluke - 03376589</string>
-        </property>
-       </item>
        <item>
         <property name="text">
          <string>Adicionar nova ferramenta</string>
@@ -525,7 +520,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QPlainTextEdit" name="preencherInfraTE"/>
+        <widget class="QPlainTextEdit" name="preencherInfraTE">
+         <property name="placeholderText">
+          <string>Ex. Temperatura Fora da especificação - 28oC  </string>
+         </property>
+        </widget>
        </item>
        <item alignment="Qt::AlignHCenter">
         <widget class="QPushButton" name="copiarRelatorio">
