--- a/evo.ui
+++ b/evo.ui
@@ -455,7 +455,10 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_22">
+    <layout class="QHBoxLayout" name="horizontalLayout_22" stretch="1,1">
+     <property name="spacing">
+      <number>15</number>
+     </property>
      <item>
       <layout class="QVBoxLayout" name="verticalLAFerramenta">
        <property name="sizeConstraint">
@@ -485,6 +488,59 @@
           <string>Atenção ferramenta próxima ao vencimento (15/10)</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_12">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QLabel" name="tipoProblemaLA">
+             <property name="text">
+              <string>O problema é:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="tipoProblemaRB1">
+             <property name="text">
+              <string>Fi&amp;xo</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="tipoProblemaRB2">
+             <property name="text">
+              <string>I&amp;ntermitente</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="tipoProblemaRB3">
+             <property name="text">
+              <string>Reprod&amp;uzível</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_8">
+           <item>
+            <widget class="QLabel" name="planoAcaoLA">
+             <property name="text">
+              <string>Plano de ação para próxima visita:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPlainTextEdit" name="planoAcaoTE"/>
+           </item>
+          </layout>
+         </item>
+        </layout>
        </item>
        <item>
         <layout class="QVBoxLayout" name="preencherPSI">
@@ -771,18 +827,35 @@
            </property>
           </widget>
          </item>
-         <item alignment="Qt::AlignHCenter">
-          <widget class="QPushButton" name="copiarRelatorio">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>Copiar Relatório</string>
-           </property>
-          </widget>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_12">
+           <item>
+            <widget class="QLabel" name="complexidadeLA">
+             <property name="text">
+              <string>Complexidade do atendimento de campo:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="complexidadeCB">
+             <item>
+              <property name="text">
+               <string>Baixa</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Média</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Alta</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
@@ -790,89 +863,6 @@
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLAFollowUP">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_12">
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3">
-           <item>
-            <widget class="QLabel" name="tipoProblemaLA">
-             <property name="text">
-              <string>O problema é:</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="tipoProblemaRB1">
-             <property name="text">
-              <string>Fi&amp;xo</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="tipoProblemaRB2">
-             <property name="text">
-              <string>I&amp;ntermitente</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="tipoProblemaRB3">
-             <property name="text">
-              <string>Reprod&amp;uzível</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_8">
-           <item>
-            <widget class="QLabel" name="planoAcaoLA">
-             <property name="text">
-              <string>Plano de ação para próxima visita:</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPlainTextEdit" name="planoAcaoTE"/>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_12">
-         <item>
-          <widget class="QLabel" name="complexidadeLA">
-           <property name="text">
-            <string>Complexidade do atendimento de campo:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="complexidadeCB">
-           <item>
-            <property name="text">
-             <string>Baixa</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Média</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Alta</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
-       </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_15">
          <item>
@@ -944,6 +934,49 @@
         </layout>
        </item>
       </layout>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_23">
+     <item>
+      <spacer name="horizontalSpacer_7">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="copiarRelatorio">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Copiar Relatório</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_8">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
